--- a/my-first-app/src/app/app.component.html
+++ b/my-first-app/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h3>Im in the appComponent</h3>
-<hr>
-<app-servers></app-servers>
+<div class="container">
+  <div class="row">
+    <h3>Im in the appComponent</h3>
+    <hr>
+    <app-servers></app-servers>
+  </div>
+</div>
+
