Added button which is enabled dynamically

--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -5,6 +5,7 @@
   <title>Title</title>
 </head>
 <body>
-  <p>The server component</p>
+
+  <p>Server with ID {{ serverId }} is {{ getServerStatus() }}</p>
 </body>
 </html>
