--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,3 +1,2 @@
-<p>servers works!</p>
-<app-server></app-server>
+<button [disabled]="!allowNewServer" class="btn btn-primary">Add Server</button><app-server></app-server>
 <app-server></app-server>
