--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,2 +1,6 @@
-<button [disabled]="!allowNewServer" class="btn btn-primary">Add Server</button><app-server></app-server>
+<button [disabled]="!allowNewServer" class="btn btn-primary" (click)="onCreateServer()">Add Server</button>
+<hr>
+<!--<p [innerText]="allowNewServer"></p>-->
+<p> {{serverCreationStatus}} </p>
+<app-server></app-server>
 <app-server></app-server>
