--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -1,5 +1,5 @@
 <input type="text" class="form-control" [(ngModel)]="serverName">
-<p> {{serverName}} </p>
+<!--<p> {{serverName}} </p>-->
 <button [disabled]="!allowNewServer" class="btn btn-primary" (click)="onCreateServer()">Add Server</button>
 <hr>
 <!--<p [innerText]="allowNewServer"></p>-->
