Added ngIf examples

--- a/my-first-app/src/app/servers/servers.component.html
+++ b/my-first-app/src/app/servers/servers.component.html
@@ -2,7 +2,8 @@
 <!--<p> {{serverName}} </p>-->
 <button [disabled]="!allowNewServer" class="btn btn-primary" (click)="onCreateServer()">Add Server</button>
 <hr>
-<!--<p [innerText]="allowNewServer"></p>-->
-<p> {{serverCreationStatus}} </p>
+<!--<p [innerText]="allowNewServer"></p>
+<p> {{serverCreationStatus}} </p>-->
+<p *ngIf="serverCreated">Server was created, server name is {{ serverName }}</p>
 <app-server></app-server>
 <app-server></app-server>
