--- a/my-first-app/src/app/server/server.component.html
+++ b/my-first-app/src/app/server/server.component.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 
-  <p [ngStyle]="{'background-color': getColor()}">Server with ID {{ serverId }} is {{ getServerStatus() }}</p>
+  <p [ngStyle]="{'background-color': getColor()}" [ngClass]="{online:serverStatus === 'online'}">Server with ID {{ serverId }} is {{ getServerStatus() }}</p>
 </body>
 </html>
