--- a/Project/src/app/app.component.html
+++ b/Project/src/app/app.component.html
@@ -1,7 +1,9 @@
+<app-head></app-head>
 <div class="container-fluid">
   <div class="row">
-    <div class="col-md-2">
-      <h1>Im working!</h1>
+    <div class="col-md-12">
+      <app-recipes></app-recipes>
+      <app-shopping-list></app-shopping-list>
     </div>
   </div>
 </div>
