--- a/Project/src/app/app.component.html
+++ b/Project/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-head></app-head>
-<div class="container-fluid">
+<div class="container-fluid p-4">
   <div class="row">
     <div class="col-md-12">
       <app-recipes></app-recipes>
