--- a/cmp-databinding/src/app/app.component.html
+++ b/cmp-databinding/src/app/app.component.html
@@ -1,9 +1,16 @@
 <div class="container">
-  <app-cockpit></app-cockpit>
+  <app-cockpit (serverCreated)="onServerAdded($event)" (bpCreated)="onBlueprintAdded($event)"></app-cockpit>
   <hr>
   <div class="row">
     <div class="col-xs-12">
-    <app-server-element *ngFor="let serverElement of serverElements" [element]="serverElement"></app-server-element>
+      <button class="btn btn-primary" (click)="OnChangeFirst()">Change Element</button>
+      <button class="btn btn-danger" (click)="OnDestroy()">Destroy Element</button>
+    <app-server-element *ngFor="let serverElement of serverElements" [srvElement]="serverElement" [name]="serverElement.name">
+      <p #contentP>
+        <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
+        <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
+      </p>
+    </app-server-element>
     </div>
   </div>
 </div>
