--- a/Project/src/app/header/header.component.html
+++ b/Project/src/app/header/header.component.html
@@ -7,10 +7,10 @@
     <div class="collapse navbar-collapse" id="NavDropdown">
       <ul class="navbar-nav mx-3">
         <li class="nav-item">
-          <a class="nav-link" href="#">Recipes</a>
+          <a class="nav-link" href="#" (click)="onSelect(0)">Recipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Shopping List</a>
+          <a class="nav-link" href="#" (click)="onSelect(1)">Shopping List</a>
         </li>
       </ul>
       <ul class="navbar-nav ms-auto">
