--- a/Project/src/app/recipes/recipe-info/recipe-info.component.html
+++ b/Project/src/app/recipes/recipe-info/recipe-info.component.html
@@ -1,11 +1,11 @@
-<div class="row">
+<div class="row my-5">
   <div class="col-xs-12">
-    <img src="" class="img-fluid">
+    <img [src]="recipe.imagePath" style="max-height: 100px;" class="img-fluid">
   </div>
 </div>
 <div class="row">
   <div class="col-xs-12">
-    <h1>Recipe Name</h1>
+    <h1> {{recipe.name}} </h1>
   </div>
 </div>
 <div class="row">
@@ -14,13 +14,13 @@
       <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownBtn" data-bs-toggle="dropdown">Manage Recipe</button>
       <ul class="dropdown-menu" aria-labelledby="dropdownBtn">
         <li>
-          <a href="#">Add To Shopping List</a>
+          <a class="dropdown-item" href="#">Add To Shopping List</a>
         </li>
         <li>
-          <a href="#">Edit Recipe</a>
+          <a class="dropdown-item" href="#">Edit Recipe</a>
         </li>
         <li>
-          <a href="#">Delete Recipe</a>
+          <a class="dropdown-item" href="#">Delete Recipe</a>
         </li>
       </ul>
     </div>
@@ -28,7 +28,7 @@
 </div>
 <div class="row">
   <div class="col-xs-12">
-    Description
+    {{recipe.desc}}
   </div>
 </div><div class="row">
   <div class="col-xs-12">
