--- a/Project/src/app/recipes/recipes.component.html
+++ b/Project/src/app/recipes/recipes.component.html
@@ -1,8 +1,11 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list (CurrRecipeSelected)="currRecipe = $event"></app-recipe-list>
   </div>
   <div class="col-md-7">
-    <app-recipe-info></app-recipe-info>
+    <app-recipe-info *ngIf="currRecipe; else infoText" [recipe]="currRecipe"></app-recipe-info>
+    <ng-template #infoText>
+      <p class="my-5">Please select a Recipe!</p>
+    </ng-template>
   </div>
 </div>
