--- a/Project/src/app/shopping-list/edit/edit.component.html
+++ b/Project/src/app/shopping-list/edit/edit.component.html
@@ -4,16 +4,16 @@
       <div class="my-4">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control">
+          <input type="text" id="name" class="form-control" #nameInput>
         </div>
         <div class="col-sm-2 form-group">
           <label for="amount">Amount</label>
-          <input type="number" id="amount" class="form-control">
+          <input type="number" id="amount" class="form-control" #amtInput>
         </div>
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <button class="btn btn-success" type="submit">Add</button>
+          <button class="btn btn-success" type="submit" (click)="addItem()">Add</button>
           <button class="btn btn-danger mx-2" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
