Added ShoppiniglistService & RecipeService to project

--- a/Project/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/Project/src/app/recipes/recipe-list/recipe-list.component.html
@@ -4,5 +4,5 @@
   </div>
 </div>
 <div class="list-group my-3">
-  <app-recipe *ngFor="let recipeObj of recipes" [recipe]="recipeObj" (recipeSelected)="getCurrRecipe(recipeObj)"></app-recipe>
+  <app-recipe *ngFor="let recipeObj of recipes" [recipe]="recipeObj"></app-recipe>
 </div>
