--- a/Project/src/app/recipes/recipe-info/recipe-info.component.html
+++ b/Project/src/app/recipes/recipe-info/recipe-info.component.html
@@ -14,7 +14,7 @@
       <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownBtn" data-bs-toggle="dropdown">Manage Recipe</button>
       <ul class="dropdown-menu" aria-labelledby="dropdownBtn">
         <li>
-          <a class="dropdown-item" href="#">Add To Shopping List</a>
+          <a class="dropdown-item" href="#" (click)="AddToShoppingList()">Add Items To Shopping List</a>
         </li>
         <li>
           <a class="dropdown-item" href="#">Edit Recipe</a>
@@ -27,11 +27,16 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-12">
+  <div class="col-xs-12 my-2">
     {{recipe.desc}}
   </div>
-</div><div class="row">
+</div>
+<div class="row">
   <div class="col-xs-12">
-    Ingredients
+    <ul class="list-group my-2">
+      <li class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let ingredient of recipe.ingredients">
+        {{ingredient.name}} <span class="badge bg-danger rounded-pill">{{ingredient.amount}}</span>
+      </li>
+    </ul>
   </div>
 </div>
