--- a/Project/src/app/shopping-list/shopping-list.component.html
+++ b/Project/src/app/shopping-list/shopping-list.component.html
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-edit (ingredientAdded)="OnIngredientAdd($event)"></app-edit>
+    <app-edit></app-edit>
     <hr>
-    <ul class="list-group list-group">
+    <ul class="list-group">
       <button class="list-group-item d-flex justify-content-between align-items-center" *ngFor="let ingredient of ingredients">
         {{ ingredient.name }}
         <span class="badge bg-danger rounded-pill ">{{ ingredient.amount }}</span>
