--- a/routing-app/src/app/servers/edit-server/edit-server.component.html
+++ b/routing-app/src/app/servers/edit-server/edit-server.component.html
@@ -1,21 +1,26 @@
-<div class="form-group">
-  <label for="name">Server Name</label>
-  <input
-    type="text"
-    id="name"
-    class="form-control"
-    [(ngModel)]="serverName">
-</div>
-<div class="form-group">
-  <label for="status">Server Status</label>
-  <select
-    id="status"
-    class="form-control"
-    [(ngModel)]="serverStatus">
-    <option value="online">Online</option>
-    <option value="offline">Offline</option>
-  </select>
-</div>
-<button
-  class="btn btn-primary mt-3"
-  (click)="onUpdateServer()">Update Server</button>
+<h4 *ngIf="!allowEdit;else editElse">You're not allowed to edit!</h4>
+<ng-template #editElse>
+  <div class="form-group" >
+    <label for="name">Server Name</label>
+    <input
+      type="text"
+      id="name"
+      class="form-control"
+      [(ngModel)]="serverName">
+  </div>
+
+  <div class="form-group">
+    <label for="status">Server Status</label>
+    <select
+      id="status"
+      class="form-control"
+      [(ngModel)]="serverStatus">
+      <option value="online">Online</option>
+      <option value="offline">Offline</option>
+    </select>
+  </div>
+  <button
+    class="btn btn-primary mt-3"
+    (click)="onUpdateServer()">Update Server
+  </button>
+</ng-template>
